hocr (0.4.6)
  
  * examples now named: hocr, hocr-gnome, hocr-qt
  
  * add a buffer length check before copeing strings, thanks to Ido Kaner.
  
  * add column support
  
  
  -- Yaacov Zamir <kzamir@walla.co.il>  Tue, 23 Aug 2005 02:13

hocr (0.4.5)
  
  * Yuval Tanny: idea to make line detection more accurate
    by adding min/max line_coverage consts and a minimum
    finding logic between lines.
    
  * add a HACKING and BUGS files to set guidelines for patches in
    the future.
	
  * add hocr-qt example and remove qhocr and the bsd things.
  
  -- Yaacov Zamir <kzamir@walla.co.il>  Sun, 21 Aug 2005 02:13
  
hocr (0.4.4)
  
  * add Diego Iastrubni <elcuco@kde.org> qhocr to the examples directory.
    see examles/README_examples and examples/COPYING_examples.
  
  -- Yaacov Zamir <kzamir@walla.co.il>  Fri, 19 Aug 2005 02:13

hocr (0.4.3)
  
  * add C++ bindings
  
  -- Yaacov Zamir <kzamir@walla.co.il>  Thu, 18 Aug 2005 22:13

hocr (0.4.3)
  
  * add hocr man file
  * add file input function for pbm formated files
  * add documentation in the hocr.h file.
  
  -- Yaacov Zamir <kzamir@walla.co.il>  Thu, 18 Aug 2005 22:13
  
hocr (0.4.0)

  * hocr is a lib now
  * Yuval Tanny: patch to use get/set pixels functions,
    making the code much more readable and smaller.
  * remove gnome, gtk and glib dependencies from ocr code
  * TODO: create a load image function
  
  -- Yaacov Zamir <kzamir@walla.co.il>  Tue, 16 Aug 2005 22:13
	
hocr (0.3.2)

  * make the command line compatible with gocr -i input_file -f format
  * add html output to command line
  * add sane support by assuming input is ppm if not explicitly set

  -- Yaacov Zamir <kzamir@walla.co.il>  Tue, 16 Aug 2005 22:13
  
hocr (0.3.1)

  * Dan Kenigsberg: Fix memory leak when openinig new picture
  * Dovix: add menu entry and a spec file for rpm creating
  * add command line interface for Dan Kenigsberg

  -- Yaacov Zamir <kzamir@walla.co.il>  Sun, 14 Aug 2005 22:13
  
hocr (0.3.0)

  * close crash bug